--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "cross-env": "^7.0.2",
+    "mongoose": "^6.2.4",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
