--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,11 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "paths": {
+			"@/models/*": ["models/*"],
+			"@/lib/*": ["lib/*"],
+		}
   },
   "exclude": ["dist", ".next", "out", "next.config.js"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
