--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "cross-env NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.2",
     "mongoose": "^6.2.4",
     "next": "latest",
