--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
     "next": "latest",
     "react": "^17.0.2",
