--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "@types/react-dom": "^16.9.8",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
-    "typescript": "4.0"
+    "typescript": "^4.3.5"
   }
 }
